@@ -18,8 +18,8 @@ more=more
 A=A
 B=B
 C=C
-moreCovalent=More Covalent
-moreIonic=More Ionic
+moreCovalent=more covalent
+moreIonic=more ionic
 pattern.0atomName=Atom {0}
 pattern.0label={0}:
 none=none
